fix: make sure images to not overflow

--- a/src/styles/blogPage.pcss
+++ b/src/styles/blogPage.pcss
@@ -228,6 +228,11 @@ article, .body_txt {
   p, figure {
     margin-bottom: var(--size-6);
     line-height: 2;
+
+    img {
+      max-width: 100%;
+      height: auto;
+    }
   }
 
   h1, h2, h3, h4, h5, h6 {
